--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Baseball cloud" />
     <link
+      href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900"
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
-    <title>Baseball cloud</title>
+    <title>BaseballCloud</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
